scrollbar fix

--- a/mini/style.css
+++ b/mini/style.css
@@ -1,7 +1,3 @@
-html {
-  min-height: 100%;
-}
-
 body {
   background: radial-gradient(
     circle,
